Fill form width overflow possible fix pt.7

--- a/components/pages/completare-cv/FillForm.css
+++ b/components/pages/completare-cv/FillForm.css
@@ -14,6 +14,7 @@
 
       input,
       textarea {
+        max-width: 100%;
         background-color: #f5f5f513;
         border-radius: 5px;
         padding: 5px 10px;
@@ -41,7 +42,7 @@
     fieldset {
       border: none;
       margin-top: 50px;
-      border: 2px solid white;
+      width: 100%;
 
       legend {
         font-size: 20px;
